include container and jumbtron with header text in html. add form with initial question to request user name.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <script src="js/jquery-3.2.0.js"></script>
     <script src="js/scripts.js"></script>
-    <title></title>
+    <title>What Programming Language Should You Learn?</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="jumbotron">
+        <h1>What Programming Language Should You Learn?</h1>
+        <h4>Take this short quiz to help you determine what programming language would be best suited for you!</h4>
+      </div>
+      <form>
+         <input id="name" type="text" placeholder="Your First Name" required>
+      </form>
+    </div>
   </body>
 </html>
