--- a/index.html
+++ b/index.html
@@ -20,63 +20,63 @@
         <label for="favactivity">From the list below choose your favorite activity.</label>
         <br>
         <select id="favactivity">
-          <option value="1">a. Reading Forbes magazine.</option>
-          <option value="2">b. Blogging and reading other blog posts.</option>
-          <option value="3">c. Taking online quizzes to find out what my spirit animal is, which celebrity I would date, etc.</option>
+          <option value="0">a. Taking online quizzes to find out what my spirit animal is, which celebrity I would date, etc.</option>
+          <option value="1">b. Blogging and reading other blog posts.</option>
+          <option value="2">c. Reading Forbes magazine.</option>
         </select>
         <br>
         <br>
         <label for="style">How would you define your style?</label>
         <br>
         <select id="style">
-          <option value="1">a. Preppy.</option>
-          <option value="2">b. Trendy.</option>
-          <option value="3">c. Minimalist.</option>
+          <option value="0">a. Minimalist.</option>
+          <option value="1">b. Trendy.</option>
+          <option value="2">c. Preppy.</option>
         </select>
         <br>
         <br>
         <label for="vacay">Where is your ideal vacation?</label>
         <br>
         <select id="vacay">
-          <option value="1">a. Seattle, WA</option>
-          <option value="2">b. San Francisco, CA</option>
-          <option value="3">c. Tokyo, Japan</option>
+          <option value="0">a. Tokyo, Japan</option>
+          <option value="1">b. San Francisco, CA</option>
+          <option value="2">c. Seattle, WA</option>
         </select>
         <br>
         <br>
         <label for="hotel">When you go on vacation how do you find your accommodations?</label>
         <br>
         <select id="hotel">
-          <option value="1">a. I go directly to my favorite hotel’s website.</option>
-          <option value="2">b. Travelocity is my go to hotel booking site.</option>
-          <option value="3">c. I like to peruse the local airbnb options</option>
+          <option value="0">a. I like to peruse the local airbnb options. </option>
+          <option value="1">b. Travelocity is my go to hotel booking site.</option>
+          <option value="2">c. I go directly to my favorite hotel’s website.</option>
         </select>
         <br>
         <br>
         <label for="computer">Windows or Mac?</label>
         <br>
         <select id="computer">
-          <option value="1">a. Windows!</option>
-          <option value="2">b. Both...?</option>
-          <option value="3">c. Mac!</option>
+          <option value="0">a. Mac!</option>
+          <option value="1">b. Both...?</option>
+          <option value="2">c. Windows!</option>
         </select>
         <br>
         <br>
         <label for="idol">Who is your idol?</label>
         <br>
         <select id="idol">
-          <option value="1">a. Bill Gates</option>
-          <option value="2">b. Mark Zuckerberg</option>
-          <option value="3">c. Yukihiro Matsumoto</option>
+          <option value="0">a. Yukihiro Matsumoto</option>
+          <option value="1">b. Mark Zuckerberg</option>
+          <option value="2">c. Bill Gates</option>
         </select>
         <br>
         <br>
         <label for="work">When you graduate from coding school what type of company would you like to work for?</label>
         <br>
         <select id="work">
-          <option value="1">a. Corporate please! I want an established company with thousands of employees and help them build their systems.</option>
-          <option value="2">b. Hmm…I think I would prefer working somewhere with a variety of projects coming in.</option>
-          <option value="3">c. I want to work for a company that uses web applications to interact with their customers. Probably a start up.</option>
+          <option value="0">a. I want to work for a company that uses web applications to interact with their customers. Probably a start up.</option>
+          <option value="1">b. Hmm…I think I would prefer working somewhere with a variety of projects coming in.</option>
+          <option value="2">c. Corporate please! I want an established company with thousands of employees and help them build their systems.</option>
         </select>
         <br>
         <br>
@@ -84,10 +84,10 @@
         <br>
         <br>
       </form>
-      <p class="programs" id="c-sharp">
-      You selected mostly a's. You should probably learn C#. C# is most popular among bigger established businesses, often for building internal software. Because it's been around for a long time and has the backing of Microsoft, it is one of the most in-demand languages in the job market. <strong>Best of luck!</strong></p>
-      <p class="programs" id="php">You selected mostly b's. The best language for you is most likely PHP. PHP is most used in content-heavy websites with relatively little user interaction. The most popular content management systems - Wordpress, Drupal, and Joomla - are all written in PHP, and everything from local restaurants' websites up through large complex government deployments are built with these tools. If you're keen to work for an agency that builds websites for clients, or if you like the idea of building out sites for brands, businesses, and organizations, PHP is a great direction to go. <strong>So now get out there and code!</strong></p>
       <p class="programs" id="ruby">You selected mostly c's. The ideal language for you is Ruby. Ruby is a favorite language of developers building interactive web applications. If an app involves users creating accounts, entering information, and interacting with dynamic content, there's a good chance it is built with Ruby. Ruby became popular because the Rails framework, which is written with Ruby, simplified many of the common tasks associated with building web applications. It's most popular with startups and smaller companies who are looking to build their product quickly.<strong>Have fun coding!</strong></p>
+      <p class="programs" id="php">You selected mostly b's. The best language for you is most likely PHP. PHP is most used in content-heavy websites with relatively little user interaction. The most popular content management systems - Wordpress, Drupal, and Joomla - are all written in PHP, and everything from local restaurants' websites up through large complex government deployments are built with these tools. If you're keen to work for an agency that builds websites for clients, or if you like the idea of building out sites for brands, businesses, and organizations, PHP is a great direction to go. <strong>So now get out there and code!</strong></p>
+      <p class="programs" id="c-sharp">
+        You selected mostly a's. You should probably learn C#. C# is most popular among bigger established businesses, often for building internal software. Because it's been around for a long time and has the backing of Microsoft, it is one of the most in-demand languages in the job market. <strong>Best of luck!</strong></p>
     </div>
   </body>
 </html>
