add columns to index.html to seperate questions into 3 columns on the screen.

--- a/index.html
+++ b/index.html
@@ -14,142 +14,152 @@
         <h4>Take this short quiz to help you determine what programming language would be best suited for you!</h4>
       </div>
       <form id="programs">
-        <input id="name" type="text" placeholder="Your First Name" required>
-        <br>
-        <br>
-        <label for="favactivity">From the list below choose your favorite activity.</label>
-        <br>
-        <div class="radio">
-          <label>
-            <input type="radio" name="favactivity" value="0">a. Taking online quizzes to find out what my spirit animal is, which celebrity I would date, etc.
-          </label>
+        <div class="row">
+          <div class="col-md-4">
+            <label for="style">What is your name?</label>
+            <br>
+            <input id="name" type="text" placeholder="Your First Name" required>
+            <br>
+            <br>
+            <label for="favactivity">From the list below choose your favorite activity.</label>
+            <br>
+            <div class="radio">
+              <label>
+                <input type="radio" name="favactivity" value="0">a. Taking online quizzes to find out what my spirit animal is, which celebrity I would date, etc.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="favactivity" value="2">b. Blogging and reading other blog posts.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="favactivity" value="4">c. Reading Forbes magazine.
+              </label>
+            </div>
+            <br>
+            <br>
+            <label for="style">How would you define your style?</label>
+            <br>
+            <div class="radio">
+              <label>
+                <input type="radio" name="style" value="0">a. Minimalist.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="style" value="2">b. Trendy.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="style" value="4">c. Preppy.
+              </label>
+            </div>
+            <br>
+            <br>
+          </div>
+          <div class="col-md-4">
+            <label for="vacay">Where is your ideal vacation?</label>
+            <br>
+            <div class="radio">
+              <label>
+                <input type="radio" name="vacay" value="0">a. Tokyo, Japan
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="vacay" value="2">b. San Francisco, CA
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="vacay" value="4">c. Seattle, WA
+              </label>
+            </div>
+            <br>
+            <br>
+            <label for="hotel">When you go on vacation how do you find your accommodations?</label>
+            <br>
+            <div class="radio">
+              <label>
+                <input type="radio" name="hotel" value="0">a. I like to peruse the local airbnb options.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="hotel" value="2">b. Travelocity is my go to hotel booking site.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="hotel" value="4">c. I go directly to my favorite hotel’s website.
+              </label>
+            </div>
+            <br>
+            <br>
+            <label for="computer">Windows or Mac?</label>
+            <br>
+            <div class="radio">
+              <label>
+                <input type="radio" name="computer" value="0">a. Mac!
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="computer" value="2">b. Both...?
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="computer" value="4">c. Windows!
+              </label>
+            </div>
+            <br>
+            <br>
+          </div>
+          <div class="col-md-4">
+            <label for="idol">Who is your idol?</label>
+            <br>
+            <div class="radio">
+              <label>
+                <input type="radio" name="idol" value="0">a. Yukihiro Matsumoto
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="idol" value="2">b. Mark Zuckerberg
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="idol" value="4">c. Bill Gates
+              </label>
+            </div>
+            <br>
+            <br>
+            <label for="work">When you graduate from coding school what type of company would you like to work for?</label>
+            <br>
+            <div class="radio">
+              <label>
+                <input type="radio" name="work" value="0">a. I want to work for a company that uses web applications to interact with their customers. Probably a start up.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="work" value="2">b. Hmm…I think I would prefer working somewhere with a variety of projects coming in.
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="work" value="4">c. Corporate please! I want an established company with thousands of employees and help them build their systems.
+              </label>
+            </div>
+            <br>
+            <br>
+          </div>
         </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="favactivity" value="2">b. Blogging and reading other blog posts.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="favactivity" value="4">c. Reading Forbes magazine.
-          </label>
-        </div>
-        <br>
-        <br>
-        <label for="style">How would you define your style?</label>
-        <br>
-        <div class="radio">
-          <label>
-            <input type="radio" name="style" value="0">a. Minimalist.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="style" value="2">b. Trendy.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="style" value="4">c. Preppy.
-          </label>
-        </div>
-        <br>
-        <br>
-        <label for="vacay">Where is your ideal vacation?</label>
-        <br>
-        <div class="radio">
-          <label>
-            <input type="radio" name="vacay" value="0">a. Tokyo, Japan
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="vacay" value="2">b. San Francisco, CA
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="vacay" value="4">c. Seattle, WA
-          </label>
-        </div>
-        <br>
-        <br>
-        <label for="hotel">When you go on vacation how do you find your accommodations?</label>
-        <br>
-        <div class="radio">
-          <label>
-            <input type="radio" name="hotel" value="0">a. I like to peruse the local airbnb options.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="hotel" value="2">b. Travelocity is my go to hotel booking site.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="hotel" value="4">c. I go directly to my favorite hotel’s website.
-          </label>
-        </div>
-        <br>
-        <br>
-        <label for="computer">Windows or Mac?</label>
-        <br>
-        <div class="radio">
-          <label>
-            <input type="radio" name="computer" value="0">a. Mac!
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="computer" value="2">b. Both...?
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="computer" value="4">c. Windows!
-          </label>
-        </div>
-        <br>
-        <br>
-        <label for="idol">Who is your idol?</label>
-        <br>
-        <div class="radio">
-          <label>
-            <input type="radio" name="idol" value="0">a. Yukihiro Matsumoto
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="idol" value="2">b. Mark Zuckerberg
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="idol" value="4">c. Bill Gates
-          </label>
-        </div>
-        <br>
-        <br>
-        <label for="work">When you graduate from coding school what type of company would you like to work for?</label>
-        <br>
-        <div class="radio">
-          <label>
-            <input type="radio" name="work" value="0">a. I want to work for a company that uses web applications to interact with their customers. Probably a start up.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="work" value="2">b. Hmm…I think I would prefer working somewhere with a variety of projects coming in.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="work" value="4">c. Corporate please! I want an established company with thousands of employees and help them build their systems.
-          </label>
-        </div>
-        <br>
-        <br>
         <button type="submit" class="btn">So, what program should I learn?</button>
         <br>
         <br>
