add question class and define background color for questions and center text.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
       <form id="programs">
         <div class="row">
           <div class="col-md-4">
-            <label for="style">What is your name?</label>
-            <br>
+            <div class="question">
+              <label for="style">What is your name?</label>
+              <br>
             <input id="name" type="text" placeholder="Your First Name" required>
+            </div>
             <br>
             <br>
-            <label for="favactivity">From the list below choose your favorite activity.</label>
-            <br>
+            <div class="question">
+              <label for="favactivity">From the list below choose your favorite activity.</label>
+            </div>
             <div class="radio">
               <label>
                 <input type="radio" name="favactivity" value="0">a. Taking online quizzes to find out what my spirit animal is, which celebrity I would date, etc.
@@ -40,8 +43,9 @@
             </div>
             <br>
             <br>
+            <div class="question">
             <label for="style">How would you define your style?</label>
-            <br>
+            </div>
             <div class="radio">
               <label>
                 <input type="radio" name="style" value="0">a. Minimalist.
@@ -61,8 +65,9 @@
             <br>
           </div>
           <div class="col-md-4">
+            <div class="question">
             <label for="vacay">Where is your ideal vacation?</label>
-            <br>
+            </div>
             <div class="radio">
               <label>
                 <input type="radio" name="vacay" value="0">a. Tokyo, Japan
@@ -80,8 +85,9 @@
             </div>
             <br>
             <br>
+            <div class="question">
             <label for="hotel">When you go on vacation how do you find your accommodations?</label>
-            <br>
+            </div>
             <div class="radio">
               <label>
                 <input type="radio" name="hotel" value="0">a. I like to peruse the local airbnb options.
@@ -99,8 +105,9 @@
             </div>
             <br>
             <br>
+            <div class="question">
             <label for="computer">Windows or Mac?</label>
-            <br>
+            </div>
             <div class="radio">
               <label>
                 <input type="radio" name="computer" value="0">a. Mac!
@@ -120,8 +127,9 @@
             <br>
           </div>
           <div class="col-md-4">
+            <div class="question">
             <label for="idol">Who is your idol?</label>
-            <br>
+            </div>
             <div class="radio">
               <label>
                 <input type="radio" name="idol" value="0">a. Yukihiro Matsumoto
@@ -139,8 +147,9 @@
             </div>
             <br>
             <br>
+            <div class="question">
             <label for="work">When you graduate from coding school what type of company would you like to work for?</label>
-            <br>
+            </div>
             <div class="radio">
               <label>
                 <input type="radio" name="work" value="0">a. I want to work for a company that uses web applications to interact with their customers. Probably a start up.
