add text to README.md file. update radio selectors to be required.

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="favactivity" value="0">a. Taking online quizzes to find out what my spirit animal is, which celebrity I would date, etc.
+                <input type="radio" name="favactivity" value="0" required>a. Taking online quizzes to find out what my spirit animal is, which celebrity I would date, etc.
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="favactivity" value="2">b. Blogging and reading other blog posts.
+                <input type="radio" name="favactivity" value="2" required>b. Blogging and reading other blog posts.
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="favactivity" value="4">c. Reading Forbes magazine.
+                <input type="radio" name="favactivity" value="4" required>c. Reading Forbes magazine.
               </label>
             </div>
             <br>
@@ -48,17 +48,17 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="style" value="0">a. Minimalist.
+                <input type="radio" name="style" value="0" required>a. Minimalist.
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="style" value="2">b. Trendy.
+                <input type="radio" name="style" value="2" required>b. Trendy.
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="style" value="4">c. Preppy.
+                <input type="radio" name="style" value="4" required>c. Preppy.
               </label>
             </div>
             <br>
@@ -70,17 +70,17 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="vacay" value="0">a. Tokyo, Japan
+                <input type="radio" name="vacay" value="0" required>a. Tokyo, Japan
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="vacay" value="2">b. San Francisco, CA
+                <input type="radio" name="vacay" value="2" required>b. San Francisco, CA
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="vacay" value="4">c. Seattle, WA
+                <input type="radio" name="vacay" value="4" required>c. Seattle, WA
               </label>
             </div>
             <br>
@@ -90,17 +90,17 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="hotel" value="0">a. I like to peruse the local airbnb options.
+                <input type="radio" name="hotel" value="0" required>a. I like to peruse the local airbnb options.
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="hotel" value="2">b. Travelocity is my go to hotel booking site.
+                <input type="radio" name="hotel" value="2" required>b. Travelocity is my go to hotel booking site.
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="hotel" value="4">c. I go directly to my favorite hotel’s website.
+                <input type="radio" name="hotel" value="4" required>c. I go directly to my favorite hotel’s website.
               </label>
             </div>
             <br>
@@ -110,17 +110,17 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="computer" value="0">a. Mac!
+                <input type="radio" name="computer" value="0" required>a. Mac!
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="computer" value="2">b. Both...?
+                <input type="radio" name="computer" value="2" required>b. Both...?
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="computer" value="4">c. Windows!
+                <input type="radio" name="computer" value="4" required>c. Windows!
               </label>
             </div>
             <br>
@@ -132,17 +132,17 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="idol" value="0">a. Yukihiro Matsumoto
+                <input type="radio" name="idol" value="0" required>a. Yukihiro Matsumoto
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="idol" value="2">b. Mark Zuckerberg
+                <input type="radio" name="idol" value="2" required>b. Mark Zuckerberg
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="idol" value="4">c. Bill Gates
+                <input type="radio" name="idol" value="4" required>c. Bill Gates
               </label>
             </div>
             <br>
@@ -152,17 +152,17 @@
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="work" value="0">a. I want to work for a company that uses web applications to interact with their customers. Probably a start up.
+                <input type="radio" name="work" value="0" required>a. I want to work for a company that uses web applications to interact with their customers. Probably a start up.
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="work" value="2">b. Hmm…I think I would prefer working somewhere with a variety of projects coming in.
+                <input type="radio" name="work" value="2" required>b. Hmm…I think I would prefer working somewhere with a variety of projects coming in.
               </label>
             </div>
             <div class="radio">
               <label>
-                <input type="radio" name="work" value="4">c. Corporate please! I want an established company with thousands of employees and help them build their systems.
+                <input type="radio" name="work" value="4" required>c. Corporate please! I want an established company with thousands of employees and help them build their systems.
               </label>
             </div>
             <br>
